--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -3,7 +3,7 @@
     Consolas, "Liberation Mono", monospace;
   min-height: 100vh;
   background-color: #ffffff;
-  background: rgb(238, 174, 202);
+  background: rgb(220, 77, 48);
   background: radial-gradient(
     circle,
     rgba(238, 174, 202, 1) 0%,
@@ -18,11 +18,11 @@
   width: 100%;
   height: 3.5rem;
   background-image: linear-gradient(
-    to right,
+    to left,
     rgba(255, 0, 0, 0),
     rgb(255, 255, 255)
   );
-  color: rgb(17, 42, 87);
+  color: rgb(25, 15, 15);
   padding: 0 5rem;
 }
 
